--- a/ChatApp/build.gradle
+++ b/ChatApp/build.gradle
@@ -1,5 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.15'
+
+    }
+}
 plugins {
     id 'com.android.application' version '8.0.0' apply false
     id 'com.android.library' version '8.0.0' apply false
+    id 'com.google.gms.google-services' version '4.3.15' apply true
+}
+
+task clean(type: Delete){
+    delete rootProject.buildDir
 }
