--- a/ChatApp/settings.gradle
+++ b/ChatApp/settings.gradle
@@ -1,10 +1,13 @@
 pluginManagement {
     repositories {
         google()
-        mavenCentral()
         gradlePluginPortal()
+        mavenLocal()
+        mavenCentral()
+        jcenter()
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
