--- a/ChatApp/app/build.gradle
+++ b/ChatApp/app/build.gradle
@@ -26,6 +26,7 @@ android {
         }
     }
     compileOptions {
+        encoding "UTF-8"
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
